--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 astroid==2.4.2
 autopep8==1.5.4
-beautifulsoup4==4.9.3
+beautifulsoup4
 certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-pkg-resources==0.0.0
 pycodestyle==2.6.0
 pylint==2.6.0
 requests==2.24.0
